Fix: Add cursor pointer to visibility icon in login, register pages

--- a/src/app/components/views/login/login.component.scss
+++ b/src/app/components/views/login/login.component.scss
@@ -23,6 +23,10 @@ h1 {
   margin-right: 2%;
 }
 
+.visibility-icon {
+  cursor: pointer;
+}
+
 button {
   margin-right: 0.5rem;
   padding-right: 2rem;
