--- a/src/app/components/views/register/register.component.scss
+++ b/src/app/components/views/register/register.component.scss
@@ -29,6 +29,10 @@ button {
   padding-left: 2rem;
 }
 
+.visibility-icon {
+  cursor: pointer;
+}
+
 .back-button {
   width: 18%
 }
